fix: searching icon in input field is not visible for ios mobile devices
Add fixed width and height and color

--- a/Weather-App/src/components/Navbar/navbar.module.css
+++ b/Weather-App/src/components/Navbar/navbar.module.css
@@ -43,10 +43,17 @@ nav {
 
 .searchForm .searchBtn {
 	position: absolute;
+	z-index: 5;
 	right: 8px;
 	top: 50%;
 	transform: translateY(-50%);
 	padding: 0px 5px 0px 5px;
+}
+
+.searchForm .searchBtn svg {
+	width: 20px;
+	height: 20px;
+	color: black;
 }
 
 .searchForm .locationBtn {
@@ -59,7 +66,7 @@ nav {
 
 .searchForm .locationBtn:disabled {
 	color: gray;
-	cursor:initial;
+	cursor: initial;
 }
 
 .metricsContainer button {
@@ -92,7 +99,7 @@ nav {
 	}
 }
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 435px) {
 	.logoContainer svg {
 		display: none;
 	}
